# gearwheels

./: .gitignore  LICENSE.md  README.md  conda_env.yml  pyproject.toml
gearwheels/: __main__.py
shell/: conda_env_create.sh  pdm_publish.sh
src/gearwheels/: __init__.py
src/gearwheels/machine/: __init__.py  _conceal_future.py  _conceal_future_return.py  _copy_future.py  error.py  future_set.py  icommand.py  parallel_machine.py  runner.py
