[project]
name = "gearwheels"
description = "todo"
authors = [
    {name = "vladpy8", email = "vlpyslaru+gearwheels@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]
dynamic = [
    "version",
]

[project.urls]
homepage = "https://github.com/vladpy8/gearwheels"
repository = "https://github.com/vladpy8/gearwheels"

[project.optional-dependencies]
dev = [
    "pylint>=2.15",
    "mypy>=0.982",
]


[tool.pylint]

[tool.pylint.main]
jobs=1

[tool.pylint.format]
indent-string="\t"
max-line-length=120

[tool.pylint.design]
min-public-methods=1
max-args=10


[tool.mypy]
pretty=false
show-column-numbers=true
ignore_missing_imports=true
follow_imports="silent"
no_implicit_optional=true
allow_redefinition=true
strict_equality=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unreachable=true

# [options]

# zip_safe=true
# include_package_data=true


# [options]
# package_dir=
#     =src

# [options.packages.find]
# where=src
