[project]
name = "gearwheels"
description = ""
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Vladislav Pyslaru", email = "vlpyslaru+gearwheels@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = []
dynamic = [
    "version",
]

[project.urls]
homepage = "https://github.com/vladpy8/gearwheels"
repository = "https://github.com/vladpy8/gearwheels"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pylint~=2.15",
    "mypy~=0.982",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


[tool.pylint]

[tool.pylint.main]
jobs=1

[tool.pylint.format]
indent-string="\t"
max-line-length=120

[tool.pylint.design]
min-public-methods=1
max-args=10


[tool.mypy]
pretty=false
show-column-numbers=true
ignore_missing_imports=true
follow_imports="silent"
no_implicit_optional=true
allow_redefinition=true
strict_equality=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unreachable=true
