[project]
name = "gearwheels"
description = "This is a project placeholder, please stand by"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Vladislav Pyslaru", email = "vlpyslaru+gearwheels@gmail.com"},
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Development Status :: 1 - Planning",
]
dependencies = [
]
dynamic = [
    "version",
]

[project.urls]
homepage = "https://github.com/vladpy8/gearwheels"
repository = "https://github.com/vladpy8/gearwheels"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pylint]

[tool.pylint.format]
indent-string="\t"
max-line-length=120

[tool.pylint.design]
min-public-methods=1
max-args=10

[tool.pylint.string]
check-quote-consistency=true

[tool.pylint.message-control]
disable=[
    "broad-exception-caught",
]


[tool.pyright]
typeCheckingMode="strict"


[tool.mypy]
pretty=false
show-column-numbers=true
ignore_missing_imports=true
follow_imports="silent"
no_implicit_optional=true
allow_redefinition=true
strict_equality=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unreachable=true


[tool.pdm]
version = { source = "file", path = "src/gearwheels/__version__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "pylint~=2.17",
    "mypy~=1.5",
    "yapf~=0.40",
    "pyright~=1.1",
]
